# mosaic-ocean

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
docs/: datasets.md  reproducibility.md
docs/figures/cs1/: summary.json
docs/figures/cs2/: summary.json
docs/figures/cs3/: summary.json
notebooks/: _build_cs1_notebook.py  _build_cs2_notebook.py  _build_cs3_notebook.py  _export_cs1_figures.py  _export_cs2_figures.py  _export_cs3_figures.py  cs1_gulf_of_riga_upwelling.ipynb  cs2_atlantic_hurricane.ipynb  cs3_arctic_seaice.ipynb
pipelines/: cs1_gulf_of_riga_upwelling.yaml  cs2_atlantic_hurricane.yaml
