[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mosaic-ocean"
version = "0.1.0.dev0"
description = "Multi-source Ocean Sensor And model Integration Catalogue: declarative, reproducible integration of heterogeneous oceanographic data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gabriela Gic-Grusza", email = "gabriela.gic-grusza@ug.edu.pl" },
    { name = "Adrian Bugaj" },
]
keywords = [
    "oceanography",
    "data integration",
    "FAIR",
    "STAC",
    "xarray",
    "Copernicus Marine",
    "ERA5",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Typing :: Typed",
]
dependencies = [
    "xarray>=2024.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "zarr>=2.17,<3",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "cf-xarray>=0.9",
    "pint>=0.23",
    "pint-xarray>=0.4",
    "pyproj>=3.6",
    "pystac>=1.10",
    "blake3>=0.4",
    "typer>=0.12",
    "rich>=13.7",
    "h5netcdf>=1.3",
    "h5py>=3.10",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
copernicus = ["copernicusmarine>=1.3"]
cds = ["cdsapi>=0.7"]
stac = ["pystac-client>=0.7", "stackstac>=0.5"]
argo = ["argopy>=0.1.16"]
viz = ["matplotlib>=3.8", "cartopy>=0.23", "hvplot>=0.10", "cmocean>=4.0"]
parallel = ["dask[array]>=2024.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/gagigr/mosaic-ocean"
Repository = "https://github.com/gagigr/mosaic-ocean"
Issues = "https://github.com/gagigr/mosaic-ocean/issues"
Documentation = "https://gagigr.github.io/mosaic-ocean"

[project.scripts]
mosaic = "mosaic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mosaic",
    "configs",
    "pipelines",
    "tests",
    "README.md",
    "LICENSE",
    "CITATION.cff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplifications
    "RUF",           # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["cf_xarray.*", "pint_xarray.*", "blake3.*", "ruamel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=mosaic --cov-report=term-missing"
filterwarnings = [
    # Promote our own warnings to errors, but tolerate noisy upstream deprecations.
    "error::mosaic.MosaicWarning",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:zarr.*",
    "ignore::DeprecationWarning:numcodecs.*",
    "ignore::DeprecationWarning:xarray.*",
    "ignore::FutureWarning:zarr.*",
    "ignore::FutureWarning:xarray.*",
    "ignore::UserWarning:zarr.*",
]
